--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Eduford</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -178,7 +178,7 @@
         <i class="fa fa-tumblr"></i>
     </div>
     <p>Made with <i class="fa fa-heart-o"></i> Easy Tutorials </p>
-</section>c
+</section>
 
 <!------JavaScript for Toggle Menu------->
 
