--- a/course.html
+++ b/course.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-    <section class="header">
+    <section class="sub-header">
         <nav>
             <a href="index.html"><img src="img/logo.png"></a>
             <div class="nav-links" id="navLinks">
@@ -30,15 +30,11 @@
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
-
-        <div class="text-box">
-            <h1>World's biggest University</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br> Sed aliquid sequi optio sapiente et esse.</p>
-            <a href="" class="hero-btn">Visit us to know more</a>
-        </div>
+        <h1>Our COURSES</h1>       
     </section>
 
-<!------ Course ------->
+<!------Course------->
+
 <section class="course">
     <h1>Courses We Offer</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
@@ -60,38 +56,6 @@
         </div>
     </div>
 </section>
-
-<!------Campus------->
-
-<section class="campus">
-    <h1>Our Global Campus</h1>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-    
-    <div class="row">
-        <div class="campus-col">
-            <img src="img/london.png">
-            <div class="layer">
-                <h3>LONDON</h3>
-            </div>
-        </div>
-
-        <div class="campus-col">
-            <img src="img/newyork.png">
-            <div class="layer">
-                <h3>NEW YORK</h3>
-            </div>
-        </div>
-
-        <div class="campus-col">
-            <img src="img/washington.png">
-            <div class="layer">
-                <h3>WASHINGRON</h3>
-            </div>
-        </div>
-    </div>
-
-</section>
-
 
 <!------Facilities------->
 
@@ -118,49 +82,6 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, optio.</p>
         </div>
     </div>
-
-</section>
-
-<!------Testimonials------->
-
-<section class="testimonials">
-    <h1>What Our Student Says</h1>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-
-    <div class="row">
-        <div class="testimonial-col">
-            <img src="img/user1.jpg">
-            <div>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus, laboriosam.</p>
-                <h3>Christine Berkley</h3>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star-o"></i>
-            </div>    
-        </div>
-        
-        <div class="testimonial-col">
-            <img src="img/user2.jpg">
-            <div>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus, laboriosam.</p>
-                <h3>David Byer</h3>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star-half-o"></i>
-            </div>
-        </div>
-    </div>
-</section>
-
-<!------Call To Action------->
-
-<section class="cta">
-    <h1>Enroll for our various online course <br> Anywhere from the World</h1>
-    <a href="" class="hero-btn">CONTACT US</a>
 
 </section>
 
