--- a/blog.html
+++ b/blog.html
@@ -114,7 +114,7 @@
         <i class="fa fa-tumblr"></i>
     </div>
     <p>Made with <i class="fa fa-heart-o"></i> Easy Tutorials </p>
-</section>c
+</section>
 
 <!------JavaScript for Toggle Menu------->
 
